# tinypath

./: Cargo.toml  readme.md
src/: error.rs  file_name_token.rs  lib.rs  path.rs  segment.rs  token.rs
