[package]
name = "tinypath"
version = "0.0.1"
authors = ["Vengarioth | Andreas Fischer <opensource@deviru.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]

[dependencies]
logos = "0.11"
thiserror = "1.0"
serde = { version = "1.0", optional = true }
